<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activity.FormularioAlunoActivity">

        <TextView
            android:id="@+id/tv_campo_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/nome"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/activity_formulario_aluno_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Marcos Martins"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tv_campo_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/numero"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/activity_formulario_aluno_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="phone"
            android:hint="(XX) X XXXX-XXXX"/>

        <TextView
            android:id="@+id/tv_campo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/email"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/activity_formulario_aluno_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"
            android:hint="example@gmail.com"/>

    </LinearLayout>

</ScrollView>